--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="action_settings">Settings</string>
     
     <string name="task_text">Введите текст задачи</string>
-    <string name="task_face_title">Задачи</string>
+    <string name="list_text">Введите название списка</string>
+
+    <string name="task_face_title">Задача</string>
     <string name="list_face_title">Список</string>
 
 
